libs/bng/test/negative/N0206_rxn_only_one_bond_value.bngl
# FAIL
# OUTPUT: error: Bond with numerical value '1' must be used exactly twice in a complex pattern of a rule.


begin parameters
   kp 0.00001
   km 1
end parameters

begin molecule types
   A(a,p~0~1)
end molecule types

begin reaction rules
  A(a) + A(a) <-> A(a!1).A(a) kp, km
end reaction rules
